Setup live search

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,57 +32,7 @@
 <body class="d-flex flex-column min-vh-100">
 
   <!-- Header -->
-  <header id="header" class="fixed-top">
-    <div class="container d-flex align-items-center justify-content-between">
-
-      <div class="logo-wrapper">
-        <h1 class="logo"><a href="{% url 'home' %}">Help U</a></h1>
-        <span id="small-img-logo" class="d-none d-md-block"></span>
-      </div>
-
-      <!-- Navbar -->
-      <nav id="navbar" class="navbar">
-        {% if user.is_authenticated %}
-        <span id="user-name" class="nav-link"><i class='bx bxs-user-circle'></i> {{ user.first_name }}</span>
-        {% endif %}
-        <ul>
-          {% if request.get_full_path == '/' %}
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#faq">FAQ</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          {% else %}
-          <li><a class="nav-link" href="{% url 'home' %}">Home</a></li>
-          <li><a class="nav-link" href="{% url 'home' %}#about">About</a></li>
-          <li><a class="nav-link" href="{% url 'home' %}#faq">FAQ</a></li>
-          <li><a class="nav-link" href="{% url 'home' %}#contact">Contact</a></li>
-          {% endif %}
-          
-          {% if user.is_authenticated %}
-          <li><a class="nav-link auth" href="{% url 'account_logout' %}">Logout</a></li>
-          {% else %}
-          <li><a class="nav-link auth" href="{% url 'account_signup' %}">Register</a></li>
-          <li><a class="nav-link auth" href="{% url 'account_login' %}">Login</a></li>
-          {% endif %}
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav>
-    </div>
-    <div class="container-fluid gx-0 msg-box" data-aos="fade" data-aos-easing="ease-in-back" data-aos-duration="800">
-      <div class="row">
-        <div class="col-md-6 offset-md-3 mt-2">
-          {% for message in messages %}
-          <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
-            {{ message | safe }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-          </div>
-          {% endfor %}
-        </div>
-      </div>
-    </div>
-  </header><!-- End header -->
-
-
+  {% include 'navbar.html' %}
 
   {% block content %}
   <!-- Content  -->
