--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -686,7 +686,7 @@ body {
     width: fit-content;
   }
 
-  .form-control:focus ~ #search-icon {
+  .form-control:focus ~ #search-button {
    transform: scale(1.2);
    transition: .15s ease-in-out,box-shadow .15s ease-in-out;
    z-index: 5;
@@ -791,6 +791,7 @@ body {
     font-size: 14px;
     background: var(--bluesmoke);
     box-shadow: 0px 2px 15px rgba(18, 66, 101, 0.08);
+    z-index: 100;
   }
   
   #footer .footer-top {
@@ -947,3 +948,4 @@ body {
     height:300px;
     z-index: 999;
 }
+
