--- a/templates/full.html
+++ b/templates/full.html
@@ -4,17 +4,17 @@
 {% block content %}
 <section id="full-post">
     <div class="container d-flex flex-column justify-content-center mt-3">
-        <a href="{% url 'posts' post.type %}" class="btn btn-outline-primary mb-3 mt-1"><<< Back to the list</a>
+        <a href="{% url 'posts_list' post.type %}" class="btn btn-outline-primary mb-3 mt-1"><<< Back to the list</a>
         <div class="row">
             <div class="col-lg-6 mt-2">
                 {% if "placeholder" in post.image.url %}
                 <img style="opacity: 0.4; scale: 0.6;" src="{% static 'assets/img/grateful.png' %}">
                 {% else %}
-                <img src={{ post.image.url }} alt="{{ post.title }}">
+                <img src={{ post.image.url }} alt="{{ post.title|title }}">
                 {% endif %}
             </div>
             <div class="col-lg-6">
-                <h2>{{ post.title }}</h2>
+                <h2>{{ post.title|title }}</h2>
                 <p class="card-text created text-muted h6">{{ post.created_on}}</p>
                 <hr>
                 <iframe width="500" height="300" style="border:0" loading="lazy" allowfullscreen
@@ -38,10 +38,10 @@
                 <a href="{% url 'update' post.slug %}" class="btn btn-secondary px-4">Delete</a>  
                 {% else %}
                 <button type="button" class="btn btn-primary">Contact {{post.author}}</button>
-                {% if post.type == True %}
+                {% if post.type == 'give' %}
                 <button type="button" class="btn btn-success">Say Thank You</button>
                 {% endif %}
-                {% if post.type == False %}
+                {% if post.type == 'receive' %}
                 <button type="button" class="btn btn-success">Offer Help</button>
                 {% endif %}
                 {% endif %}
