--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -9,18 +9,22 @@
             <div class="col-xl-7 col-lg-9 text-center">
                 <img class="search-logo my-4" src="{% static 'assets/img/logo.png' %}"
                     alt="logo - yellow and blue heart made of leaves">
+
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                    <button id="search-icon" class="btn btn-primary" type="button"><i class='bx bx-search'></i></button>
+                    <input id="search-input" name="q" type="search" class="form-control" placeholder="Search">
+                    <!-- <button id="search-button" class="btn btn-primary" type="submit"><i
+                            class='bx bx-search'></i></button> -->
                 </div>
+
+
                 <div class="mt-3">
-                    {% if 'posts/1/' in request.path or 'posts/10/' in request.path %}
+                    {% if 'posts_list/give' in request.path or 'posts_list/all' in request.path %}
                     <input type="checkbox" id="give" name="give" checked>
                     {% else %}
                     <input type="checkbox" id="give" name="give">
                     {% endif %}
                     <label for="give" class="pe-2">Offers</label>
-                    {% if 'posts/0/' in request.path or 'posts/10/' in request.path %}
+                    {% if 'posts_list/receive' in request.path or 'posts_list/all' in request.path %}
                     <input type="checkbox" id="receive" name="receive" checked>
                     {% else %}
                     <input type="checkbox" id="receive" name="receive">
@@ -32,118 +36,70 @@
             </div>
         </div>
 </section>
-
 <section id="listings">
-    <div class="col-10  left">
-        <a href="{% url 'new' %}" class="btn btn-success mt-1 new-post">New post</a>
-        <div class="row gx-2">
-            {% for post in post_list %}
-            <div class="col-xxl-2 col-xl-3 col-lg-4 col-sm-6">
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <a href="{% url 'full' post.slug  %}">
-                            <div class="image-container">
-                                {% if "placeholder" in post.image.url %}
-                                <img class="card-img-top" style="opacity: 0.4; scale: 0.6;"
-                                    src="{% static 'assets/img/logo_small.png' %}">
-                                {% else %}
-                                    {% cloudinary post.image height=350 width=350 crop="fill" class="card-img-top" %}
-                                {% endif %}
-                            </div>
-                            <h4 class="card-title mt-3 text-truncate" title="{{ post.title }}">{{ post.title }}</h4>
-                        </a>
-                        <p class="subtitle text-truncate p"><i class='bx bx-map'></i>
-                            <a href="https://www.google.com/maps/place/{{post.city}}+{{post.country.name}}"
-                                target="_blank" class="geo" title="{{ post.city}}, {{ post.country.name }}"> {{ post.city}}, {{ post.country.name }}
-                                <iframe class="preview" loading="lazy" allowfullscreen
-                                    referrerpolicy="no-referrer-when-downgrade"
-                                    src="https://www.google.com/maps/embed/v1/place?key={{ key }}&q={{ post.city}}+{{ post.country.name }}&zoom=11">
-                                </iframe></a></p>
-                        {% if post.area != None %}
-                        <p class="subtitle text-muted p"><i class='bx bx-building-house'></i>{{ post.area }}</p>
-                        {% else %}
-                        <p class="subtitle text-muted p"><i class='bx bx-building-house'></i> ... </p>
-                        {% endif %}
-                        <div class="author subtitle p"><i class='bx bxs-user-circle'></i><span> {{ post.author }}
-                            </span></div>
-                        <hr>
-                        <p class="card-text content line-clamp">{{ post.text }}</p>
-                        <p class="card-text text-muted h6 text-truncate">{{ post.created_on }}</p>
+            
+    {% include 'posts.html' %}
 
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
-
-        </div>
-        {% if page_obj.has_other_pages %}
-        <nav>
-            <ul class="pagination justify-content-center mt-4 mb-0">
-                {% if page_obj.has_previous %}
-                    <li class="page-item">
-                        <a class="page-link" href="?page=1{% for key, value in request.GET.items %}{% if key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">First</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}{% for key, value in request.GET.items %}{% if key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">
-                            Previous
-                        </a>
-                    </li>
-                {% endif %}
-    
-                {% for page_number in page_obj.paginator.page_range %}
-                    {% if page_number <= page_obj.number|add:3 and page_number >= page_obj.number|add:-3 %}
-                        {% if page_obj.number == page_number %}
-                            <li class="page-item active">
-                                <a class="page-link" href="?page={{ page_number }}{% for key, value in request.GET.items %}{% if key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">{{ page_number }}</a>
-                            </li>
-                        {% else %}
-                            <li class="page-item">
-                                <a class="page-link" href="?page={{ page_number }}{% for key, value in request.GET.items %}{% if key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">{{ page_number }}</a>
-                            </li>
-                        {% endif %}
-                    {% endif %}
-                {% endfor %}
-    
-                {% if page_obj.has_next %}
-                    <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.next_page_number }}{% for key, value in request.GET.items %}{% if key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">
-                            Next
-                        </a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}{% for key, value in request.GET.items %}{% if key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">
-                            Last
-                        </a>
-                    </li>
-                {% endif %}
-            </ul>
-        </nav>
-    {% endif %}
-    </div>
 </section>
 <script type="text/javascript">
-    $('#receive').on('change', function() {
+    $('#receive').on('change', function () {
         if ($(this).not(':checked') && ($('#give').is(':checked'))) {
-            document.location.href = "{% url 'posts' 1 %}"
+            document.location.href = "{% url 'posts_list' 'give' %}"
         }
         if ($(this).is(':checked') && ($('#give').not(':checked'))) {
-            document.location.href = "{% url 'posts' 0 %}"
+            document.location.href = "{% url 'posts_list' 'receive' %}"
         }
         if ($(this).is(':checked') && ($('#give').is(':checked'))) {
-            document.location.href = "{% url 'posts' 10 %}"
+            document.location.href = "{% url 'posts_list' 'all' %}"
         }
 
-        })
-    $('#give').on('change', function() {
+    })
+    $('#give').on('change', function () {
         if ($(this).not(':checked') && ($('#receive').is(':checked'))) {
-            document.location.href = "{% url 'posts' 0 %}"
+            document.location.href = "{% url 'posts_list' 'receive' %}"
         }
         if ($(this).is(':checked') && ($('#receive').not(':checked'))) {
-            document.location.href = "{% url 'posts' 1 %}"
+            document.location.href = "{% url 'posts_list' 'give' %}"
         }
         if ($(this).is(':checked') && ($('#receive').is(':checked'))) {
-            document.location.href = "{% url 'posts' 10 %}"
+            document.location.href = "{% url 'posts_list' 'all' %}"
         }
-        })
+    })
+
+    let search_input = $('#search-input')
+    const listings = $('#listings')
+    const endpoint = "{{ request.path }}"
+    const delay_by_in_ms = 700
+    let scheduled_function = false
+
+    let ajax_call = function (endpoint, request_parameters) {
+        $.ajax({
+            type: 'GET',
+            url: endpoint,
+            data: request_parameters,
+            contentType: "application/json",
+            success: function (response) {
+                console.log(response);
+                listings.fadeTo('slow', 0).promise().then(() => {
+                    listings.html(response["html_from_view"]);
+                    listings.fadeTo('slow', 1);
+                })
+            },
+            error: function (error) {
+                console.log(error)
+            },
+        })}
+
+    search_input.on('keyup', function () {
+        const request_parameters = {
+            q: $(this).val(),
+        };
+        // if scheduled_function is NOT false, cancel the execution of the function
+        if (scheduled_function) {
+            clearTimeout(scheduled_function)
+        };
+        // setTimeout returns the ID of the function to be executed
+        scheduled_function = setTimeout(ajax_call, delay_by_in_ms, endpoint, request_parameters);
+    })
 </script>
 {% endblock %}
