--- a/templates/update.html
+++ b/templates/update.html
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="container-fluid col-lg-8 mt-1">
             <div class="d-flex align-items-center">
-                <h1 class="section-title text-start pb-0">Edit Post "{{post.title}}"</h1>
+                <h1 class="section-title text-start pb-0">Edit Post "{{ post.title|title }}"</h1>
                 <img class="search-logo" style="scale: 0.5;" src="{% static 'assets/img/logo_small.png' %}">
             </div>
             <form action='{{ main.views.post_update }}' method="post"
