--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -776,7 +776,7 @@ body {
 
   /*----------------------------------------------------Account*/
     .login-block {
-      margin-top: 7%;
+      margin-top: 6%;
     }
 
     .login-block .card-body {
@@ -791,6 +791,29 @@ body {
     .login-block .card-title {
       margin-top: 0;
       font-size: 19px;
+    }
+
+    .separator {
+      display: flex;
+      align-items: center;
+      text-align: center;
+      color: rgb(194, 196, 215);
+      font-size: 14px;
+    }
+    
+    .separator::before,
+    .separator::after {
+      content: '';
+      flex: 1;
+      border-bottom: 1px solid rgb(228 232 243);
+    }
+    
+    .separator:not(:empty)::before {
+      margin-right: .25em;
+    }
+    
+    .separator:not(:empty)::after {
+      margin-left: .25em;
     }
 
   /*----------------------------------------------------Footer*/
