--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="container login-block">
     <div class="row">
-        <div class="col-md-12 d-flex justify-content-center mt-lg-3 mt-md-5 mt-5 mb-4">
+        <div class="col-md-12 d-flex justify-content-center mt-lg-5 mt-md-5 mt-5 mb-4">
           <img class="search-logo" src="{% static 'assets/img/logo_small.png' %}">
         </div>
       </div>
@@ -15,8 +15,8 @@
         <div class="col-md-12 d-flex flex-column justify-content-center mt-lg-3 mt-md-5 mt-5 mb-4">
             <h1 class="text-center">{% trans "Verify Your E-mail Address" %}</h1>
 
-            <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the
-                signup process. Please <a href="https://https://helpukr.herokuapp.com/#contact">contact us</a> if you do not receive it within a few minutes.{% endblocktrans %}</p>
+            <p class="text-center px-5">{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the
+                signup process.<br>Please <a href="https://https://helpukr.herokuapp.com/#contact">contact us</a> if you do not receive it within a few minutes.{% endblocktrans %}</p>
 
             
         </div>
