--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -5,6 +5,7 @@
 {% block head_title %}{% trans "E-mail Addresses" %}{% endblock %}
 
 {% block content %}
+<section>
 <div class="container login-block">
   <div class="row">
     <div class="col-md-12 d-flex justify-content-center mt-lg-3 mt-md-5 mt-5 mb-4">
@@ -41,9 +42,7 @@
           {% endfor %}
 
           <div class="buttonHolder">
-            <button class="secondaryAction btn btn-primary mt-3 mb-5" type="submit" name="action_primary">{% trans 'Make Primary' %}</button>
             <button class="secondaryAction btn btn-primary mt-3 mb-5" type="submit" name="action_send">{% trans 'Re-send Verification' %}</button>
-            <button class="primaryAction btn btn-primary mt-3 mb-5" type="submit" name="action_remove">{% trans 'Remove' %}</button>
           </div>
 
         </fieldset>
@@ -57,6 +56,7 @@
       {% endif %}
     </div>
   </div>
+</section>
   {% endblock %}
 
 
