--- a/templates/create_user_profile.html
+++ b/templates/create_user_profile.html
@@ -3,20 +3,19 @@
 {% load cloudinary %}
 {% load crispy_forms_tags %}
 
-
 {% block content %}
-
 <section>
     <div class="row">
         <div class="container-fluid col-lg-8 mt-1">
             <div class="d-flex align-items-center">
-                <h1 class="section-title text-start pb-0">Edit Post "{{ post.title|title }}"</h1>
+                <h1 class="section-title text-start pb-0">Create User profile</h1>
                 <img class="search-logo" style="scale: 0.5;" src="{% static 'assets/img/logo_small.png' %}">
             </div>
+            <p>Please, create user profile to proceed.</p>
+            <p>User:<strong> {{ request.user }} </strong></p>
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% crispy form %}
-                <!-- <button type="submit" class="btn btn-primary mb-2 mt-2 px-5" value="Upload">Update</button> -->
             </form>
         </div>
     </div>
