--- a/templates/new.html
+++ b/templates/new.html
@@ -11,7 +11,7 @@
                 <h1 class="section-title text-start pb-0">Create a New Post</h1>
                 <img class="search-logo" style="scale: 0.5;" src="{% static 'assets/img/logo_small.png' %}">
             </div>
-            <form action='{{ main.views.post_create }}' method="post"
+            <form method="post"
             enctype="multipart/form-data">
                 {% csrf_token %}
                 {% crispy form %}
