--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -10,13 +10,14 @@
     <div class="row">
         <div class="container-fluid col-lg-8 mt-1">
             <div class="d-flex align-items-center">
-                <h1 class="section-title text-start pb-0">Edit Post "{{ post.title|title }}"</h1>
+                <h1 class="section-title text-start pb-0">Edit Profile</h1>
                 <img class="search-logo" style="scale: 0.5;" src="{% static 'assets/img/logo_small.png' %}">
+                
             </div>
+            <h2>{{ request.user }}</h2>
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% crispy form %}
-                <!-- <button type="submit" class="btn btn-primary mb-2 mt-2 px-5" value="Upload">Update</button> -->
             </form>
         </div>
     </div>
